Use a valid release body

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
           prerelease: false
           release_name: Test  # ${{ steps.version.outputs.version }}
           tag_name: ${{ github.ref }}
-          body_path: CHANGELOG.md
+          body: "Test Release!"
 
       - name: Upload Linux Executable to Release
         uses: actions/upload-release-asset@v1
