--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,6 +84,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: $GITHUB_WORKSPACE/main/dist/winnow
+          asset_path: ${{ github.workspace }}/main/dist/winnow
           asset_name: winnow-linux
           asset_content_type: application/x-executable
