--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,12 @@ jobs:
           sudo pip install pipenv
           PIPENV_VENV_IN_PROJECT=1 pipenv sync --dev
 
+      - name: Get Version
+        id: version
+        run: |
+          cd $GITHUB_WORKSPACE/main
+          echo "::set-output name=version::$(pipenv run python cli.py --version)"
+
       - name: Build Linux Executable
         run: |
           cd $GITHUB_WORKSPACE/main
@@ -74,9 +80,9 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: Test  # ${{ steps.version.outputs.version }}
+          release_name: ${{ steps.version.outputs.version }}
           tag_name: ${{ github.ref }}
-          body: "Test Release!"
+          body: "Version ${{ steps.version.outputs.version }}"
 
       - name: Upload Linux Executable to Release
         uses: actions/upload-release-asset@v1
@@ -85,5 +91,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ github.workspace }}/main/dist/winnow
-          asset_name: winnow-linux
+          asset_name: winnow-linux-${{ steps.version.outputs.version }}
           asset_content_type: application/x-executable
