--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
           draft: false
           prerelease: false
           release_name: ${{ steps.version.outputs.version }}
-          tag_name: ${{ github.ref }}
+          tag_name: v${{ steps.version.outputs.version }}
           body: "Version ${{ steps.version.outputs.version }}"
 
       - name: Upload Linux Executable to Release
