--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -84,7 +84,7 @@ jobs:
         run: |
           cd ${env:GITHUB_WORKSPACE}/main
           pip install pipenv
-          pipenv sync --dev
+          pipenv install
 
       - name: Get Version
         id: version
