--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -21,7 +21,7 @@ jobs:
           #  are treated as errors and the build fails
           CI: false
         run: |
-          cd ${env:GITHUB_WORKSPACE}/winnow
+          cd ${GITHUB_WORKSPACE}/winnow
           npm install
           npm run build
 
