--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: winnow-react-app
-          path: ${{ github.workspace }}winnow/build
+          path: ${{ github.workspace }}/winnow/build
           retention-days: 1
 
 
