Force installation of `pefile` on Windows
I don't think this should be necessary, but...

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pyinstaller = "==4.6"
 python-multipart = "*"
 uvicorn = "*"
 
+pefile = {version = "*", sys_platform = "== 'win32'"}
 pywin32-ctypes = {version = "*", sys_platform = "== 'win32'"}
 
 [dev-packages]
