--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -248,7 +248,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}dist/winnow-${{ steps.version.outputs.version }}.exe
+          asset_path: ${{ github.workspace }}/dist/winnow-${{ steps.version.outputs.version }}.exe
           asset_name: winnow-windows-${{ steps.version.outputs.version }}
           asset_content_type: application/x-dosexec
 
@@ -264,6 +264,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}dist/winnow-${{ steps.version.outputs.version }}.dmg
+          asset_path: ${{ github.workspace }}/dist/winnow-${{ steps.version.outputs.version }}.dmg
           asset_name: winnow-mac-${{ steps.version.outputs.version }}
           asset_content_type: application/zlib
