--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -62,7 +62,7 @@ jobs:
     needs: build_frontend
     if: github.event.inputs.windows == 'true'
     outputs:
-      version: ${{ steps.version.outputs.version }}
+      backend-version: ${{ steps.version.outputs.backend-version }}
 
     steps:
       - name: Checkout Main Repo
@@ -117,6 +117,7 @@ jobs:
         id: version
         run: |
           cd ${env:GITHUB_WORKSPACE}/main
+          echo "::set-output name=backend-version::$(pipenv run python cli.py --version)"
           echo "::set-output name=version::${{needs.build_frontend.outputs.ui-version}}_$(pipenv run python cli.py --version)"
 
       - name: Build Windows Executable
@@ -138,7 +139,7 @@ jobs:
     needs: build_frontend
     if: github.event.inputs.mac == 'true'
     outputs:
-      version: ${{ steps.version.outputs.version }}
+      version: ${{ steps.backend-version.outputs.version }}
 
     steps:
       - name: Checkout Main Repo
@@ -193,6 +194,7 @@ jobs:
         id: version
         run: |
           cd $GITHUB_WORKSPACE/main
+          echo "::set-output name=backend-version::$(pipenv run python cli.py --version)"
           echo "::set-output name=version::${{needs.build_frontend.outputs.ui-version}}_$(pipenv run python cli.py --version)"
 
       - name: Build Mac Executable
@@ -216,13 +218,13 @@ jobs:
   create_release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [build_windows_executable, build_mac_executable]
+    needs: [build_frontend, build_windows_executable, build_mac_executable]
 
     steps:
       - name: Set Version
         id: version
         run: |
-          echo "::set-output name=version::${{needs.build_windows_executable.outputs.version}}"
+          echo "::set-output name=version::${{needs.build_frontend.outputs.ui-version}}_${{needs.build_windows_executable.outputs.backend-version}}"
 
       - name: Create a Release
         uses: actions/create-release@v1
@@ -234,7 +236,10 @@ jobs:
           prerelease: false
           release_name: ${{ steps.version.outputs.version }}
           tag_name: v${{ steps.version.outputs.version }}
-          body: "Version ${{ steps.version.outputs.version }}"
+          body: |
+            Version ${{ steps.version.outputs.version }}:
+            - [Winnow UI](https://github.com/ohtap/subcorpora-tool) Version: ${{needs.build_frontend.outputs.ui-version}}
+            - [API and Packaging](https://github.com/sul-cidr/winnow-packaging) Version: ${{needs.build_frontend.outputs.backend-version}}
 
       - name: Download Windows Executable
         uses: actions/download-artifact@v2
@@ -249,7 +254,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ github.workspace }}/dist/winnow-${{ steps.version.outputs.version }}.exe
-          asset_name: winnow-windows-${{ steps.version.outputs.version }}
+          asset_name: winnow-windows-${{ steps.version.outputs.version }}.exe
           asset_content_type: application/x-dosexec
 
       - name: Download Mac Executable
@@ -265,5 +270,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ github.workspace }}/dist/winnow-${{ steps.version.outputs.version }}.dmg
-          asset_name: winnow-mac-${{ steps.version.outputs.version }}
+          asset_name: winnow-mac-${{ steps.version.outputs.version }}.dmg
           asset_content_type: application/zlib
